--- a/platformio.ini
+++ b/platformio.ini
@@ -15,4 +15,5 @@ lib_deps =
     adafruit/Adafruit SSD1306@^2.5.7
     adafruit/Adafruit BusIO@^1.14.3
     igorantolic/Ai Esp32 Rotary Encoder@^1.6
-    paulstoffregen/TimerOne@^1.1.1
+    # paulstoffregen/TimerOne@^1.1.1
+    https://github.com/hagen-git/TimerOne.git#esp32-first-variant
