Test with menu for LCD(disabled LCD)

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,4 @@ lib_deps =
     igorantolic/Ai Esp32 Rotary Encoder@^1.6
     # paulstoffregen/TimerOne@^1.1.1
     https://github.com/hagen-git/TimerOne.git#esp32-first-variant
+    marcoschwartz/LiquidCrystal_I2C@^1.1.4
