Updated OLED and rotary display

--- a/platformio.ini
+++ b/platformio.ini
@@ -4,6 +4,8 @@
 platform = espressif32
 board = m5stack-atom
 framework = arduino
+monitor_speed = 9600
+
 
 
 lib_deps =
@@ -16,5 +18,5 @@ lib_deps =
     adafruit/Adafruit BusIO@^1.14.3
     igorantolic/Ai Esp32 Rotary Encoder@^1.6
     # paulstoffregen/TimerOne@^1.1.1
-    https://github.com/hagen-git/TimerOne.git#esp32-first-variant
-    marcoschwartz/LiquidCrystal_I2C@^1.1.4
+    ; https://github.com/hagen-git/TimerOne.git#esp32-first-variant
+    ; marcoschwartz/LiquidCrystal_I2C@^1.1.4
